[gd_scene load_steps=5 format=3 uid="uid://cv41ye6xiwbec"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_tbdod"]
[ext_resource type="Texture2D" uid="uid://elq8o0ika0uc" path="res://icons/search.svg" id="2_prkix"]
[ext_resource type="Texture2D" uid="uid://dye0tgr2meacp" path="res://icons/skip-back.svg" id="3_nbp0e"]
[ext_resource type="Texture2D" uid="uid://dvs5allu0xy8k" path="res://icons/rotate-ccw.svg" id="4_bogwi"]

[node name="IconsBar" type="Panel"]
custom_minimum_size = Vector2(0, 32)
offset_right = 1152.0
offset_bottom = 32.0
size_flags_horizontal = 3
script = ExtResource("1_tbdod")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 4

[node name="ToggleTagSearchButton" type="TextureButton" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_prkix")
stretch_mode = 3

[node name="ToggleTagHistoryButton" type="TextureButton" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_nbp0e")
stretch_mode = 3

[node name="Spacer" type="Control" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ReloadCurrentButton" type="TextureButton" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Scan the last directory"
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("4_bogwi")
stretch_mode = 3

[connection signal="toggled" from="HBoxContainer/ToggleTagSearchButton" to="." method="_on_toggle_tag_search_button_toggled"]
[connection signal="toggled" from="HBoxContainer/ToggleTagHistoryButton" to="." method="_on_toggle_tag_history_button_toggled"]
[connection signal="pressed" from="HBoxContainer/ReloadCurrentButton" to="." method="_on_reload_current_button_pressed"]
